## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = cann

cann_SOURCES = \
	main.cc\
	signalpool.h\
	signalpool.cc \
	main.h \
	neuron.h \
	neuron.cc

cann_LDFLAGS = 

cann_LDADD = 

